--- a/state/templates/state/redesign/elections.html
+++ b/state/templates/state/redesign/elections.html
@@ -7,6 +7,7 @@
 {% load check_object %}
 {% load is_list %}
 {% load has_key %}
+{% load l10n %}{% load i18n %}
 {% load lower %}
 {% load get_class_name %}
 {% load get_key_list %}
