--- a/state/templates/state/redesign/gov/parliament.html
+++ b/state/templates/state/redesign/gov/parliament.html
@@ -43,7 +43,7 @@
             {% endif %}
             <span style="cursor: pointer" onclick="window.open('/party/{% localize off %}{{ parl_party.party.pk }}{% endlocalize %}/')">{{ parl_party.party.title }}</span>
         </div>
-        <span>{{ parl_party.seats }}% мест</span>
+        <span>{{ parl_party.seats }}% {% trans 'мест' context "parliament" %}</span>
     </div>
     <table class="gover__goverPartyTable">
         <tbody>
@@ -113,7 +113,7 @@
         <tbody>
             <tr>
                 <td style="text-align: center">
-                    нет парламентских партий
+                    {% trans 'нет парламентских партий' context "parliament" %}
                 </td>
             </tr>
         </tbody>
