--- a/region/templates/region/redesign/buildings/defences.html
+++ b/region/templates/region/redesign/buildings/defences.html
@@ -1,4 +1,5 @@
-{% load i18n %}{% load dict_key %}
+{% load l10n %}{% load i18n %}
+{% load dict_key %}
 <div class="party__regionInfo-block">
-    <p>{% trans 'Уровень Укреплений' %}: <span>{% with level=data|dict_key:'level' %}{{ level }}{% endwith %}</span></p>
+    <p>{% trans 'Уровень Укреплений' context "region_view" %}: <span>{% with level=data|dict_key:'level' %}{{ level }}{% endwith %}</span></p>
 </div>
