пространство между кнопками

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -7070,7 +7070,7 @@ p.overview__love-stat-timer {
 .login__links {
 	position: relative;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	gap: 33rem;
 	margin-top: -20rem;
