--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -818,7 +818,7 @@
 
                   <source {% if not message|dict_key:'image_link' == 'nopic' %} data-srcset="{{  message|dict_key:'image_link'  }}" {% endif %}>
 
-                  <img class="overview__chat-ava" data-src="" alt="тег нужен, чтобы загружать картинку в source">
+                  <img class="overview__chat-ava" data-src="">
 
                   {% nopic player 'overview__chat-ava' %}
 
@@ -959,7 +959,51 @@
               {% for sticker in pack %}
             <li>
               <button class="overview__stickers-stick sticker_img" id="{{ pack_id }}_{{ sticker.pk }}">
-                <img src="{{ sticker.image.url }}" alt="{{ sticker.description }}">
+                <picture class="lazy_loaded">
+
+                  <source data-srcset="{{ sticker.image.url }}">
+
+                  <img data-src="" alt="{{ sticker.description }}">
+
+                  <svg
+                     viewBox="0 0 100 100"
+                     version="1.1"
+                     id="svg1"
+                     xmlns:xlink="http://www.w3.org/1999/xlink"
+                     xmlns="http://www.w3.org/2000/svg"
+                     xmlns:svg="http://www.w3.org/2000/svg">
+                    <defs
+                       id="defs1">
+                      <linearGradient
+                         id="linearGradient1">
+                        <stop
+                           style="stop-color:#000000;stop-opacity:1;"
+                           offset="0"
+                           id="stop1" />
+                        <stop
+                           style="stop-color:#000000;stop-opacity:0;"
+                           offset="1"
+                           id="stop2" />
+                      </linearGradient>
+                      <linearGradient
+                         xlink:href="#linearGradient1"
+                         id="linearGradient2"
+                         x1="0"
+                         y1="0.48648649"
+                         x2="100.70271"
+                         y2="100.45946"
+                         gradientUnits="userSpaceOnUse" />
+                    </defs>
+                    <rect
+                       style="fill:url(#linearGradient2);stroke-width:0.132;stroke-linejoin:bevel;paint-order:markers fill stroke;fill-opacity:1"
+                       id="rect1"
+                       width="100"
+                       height="100"
+                       x="0"
+                       y="0" />
+                  </svg>
+
+                </picture>
               </button>
             </li>
               {% endfor %}
@@ -1030,10 +1074,10 @@
         // Если у <source> есть атрибут data-srcset, загружаем его
         if (source && source.getAttribute('data-srcset')) {
           source.srcset = source.getAttribute('data-srcset');
-        }
 
-        // Добавляем класс loaded, который скрывает SVG и показывает изображение
-        element.classList.add('loaded');
+          // Добавляем класс loaded, который скрывает SVG и показывает изображение
+          element.classList.add('loaded');
+        }
       });
   }
 
