--- a/player/templates/player/redesign/lists/universal_list.html
+++ b/player/templates/player/redesign/lists/universal_list.html
@@ -114,7 +114,7 @@
 						{% if not elem|has_key:'visible' %}
 							{% for sub_col in elem|get_key_list %}
 								{% with sub_obj=line|get_attr:col %}
-							  <td class="j-t-{{ col }}_{{ sub_col }}" style="cursor: pointer" {% if sub_obj|check_object %}onclick="window.open('/{% if sub_obj|get_class_name == 'Player' %}profile{% elif sub_obj|get_class_name == 'PartyWithSize' %}party{% else %}{{ sub_obj|get_class_name|lower }}{% endif %}/{% localize off %}{{ sub_obj.pk }}{% endlocalize %}/')"{% endif %}>
+							  <td class="j-t-{{ col }}_{{ sub_col }}" style="cursor: pointer" {% if sub_obj|check_object %}onclick="window.open('/{% if sub_obj|get_class_name == 'Player' %}profile{% elif sub_obj|get_class_name == '_PartyWithSize' %}party{% else %}{{ sub_obj|get_class_name|lower }}{% endif %}/{% localize off %}{{ sub_obj.pk }}{% endlocalize %}/')"{% endif %}>
 								  {% if sub_obj|check_object %}
 								  		<!--картинка рега-->
 									  {% if col == 'region' and sub_col == 'on_map_id' %}
@@ -143,7 +143,7 @@
 							{% endfor %}
 
 						{% else %}
-						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}profile{% elif line|get_class_name == 'PartyWithSize' %}party{% elif line|get_class_name == 'RegionWithPop' %}region{% else %}{{ line|get_class_name|lower }}{% endif %}/{% localize off %}{{ line.pk }}{% endlocalize %}/')">
+						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}profile{% elif line|get_class_name == '_PartyWithSize' %}party{% elif line|get_class_name == 'RegionWithPop' %}region{% else %}{{ line|get_class_name|lower }}{% endif %}/{% localize off %}{{ line.pk }}{% endlocalize %}/')">
 						  <!--картинка рега-->
 						  {% if col == 'on_map_id' %}
 								<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
@@ -156,7 +156,7 @@
 								  {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}
 							  		<!--нет картинки: игрок-->
 							  		{% nopic_list player '' %}
-								  {% elif line|get_class_name == 'PartyWithSize' %}
+								  {% elif line|get_class_name == '_PartyWithSize' %}
 									<!--нет картинки: партия-->
 							  		{% nopic_party_list player '' %}
 								  {% endif %}
