управление государством у лидера

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -6673,6 +6673,7 @@ p.overview__love-stat-timer {
 .goverGuysModal__itemText-block {
 	display: grid;
 	gap: 8rem;
+    justify-content: center;
 }
 
 .goverGuysModal__itemText-block p {
