переводы на англиский

--- a/storage/templates/storage/redesign/trading/trading.html
+++ b/storage/templates/storage/redesign/trading/trading.html
@@ -81,7 +81,7 @@
 	      <table class="ct__js-table" style="display: none;" id="lines">
             <tbody>
                 <tr id="offers_header">
-                    <td class="j-t-one">Товар</td>
+                    <td class="j-t-one">{% trans 'товар' context "trading" %}</td>
                     <td class="j-t-two ct__js-tablePC" style="width: max-content;">{% trans 'регион' context "trading" %}</td>
                     <td class="j-t-three" style="text-align: center;">{% trans 'количество' context "trading" %}</td>
                     <td class="j-t-four" style="text-align: center;">{% trans 'цена' context "trading" %}</td>
