--- a/bill/templates/state/redesign/new_bill.html
+++ b/bill/templates/state/redesign/new_bill.html
@@ -79,7 +79,7 @@
                         <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
                     </g>
                 </svg>
-                <span>{% trans 'предложить' context "new_bill_reviewed" %}</span>
+                <span>{% trans 'предложить' context "new_bill" %}</span>
             </button>
         </div>
 
