--- a/state/templates/state/redesign/gov/parliament.html
+++ b/state/templates/state/redesign/gov/parliament.html
@@ -94,7 +94,7 @@
                         {% if deputate.player %}
                             {{ deputate.player.nickname }}
                         {% else %}
-                            свободно
+                            {% trans 'свободно' context "parliament" %}
                         {% endif %}
                     </div>
                 </td>
